[package]
name = "swiftbot_rs_lib"
version = "1.0.0"
edition = "2021"

[lib]
name = "swiftbot_rs_lib"
crate-type = ["cdylib"]  # Compile as a C-compatible dynamic library for JNI support

[dependencies]
rppal = "0.19.0"
jni = { version = "0.21.1", features = ["invocation"] }  # For JNI support
lazy_static = "1.4.0"
rscam = "0.5.5"